# bifrost_cge_resfinder

./: .gitignore  Dockerfile  README.md  config.yaml  custom_install.sh  docker-compose.dev.yaml  docker-compose.yaml  environment.yml  install.sh  pipeline.smk  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
bifrost_cge_resfinder/: __init__.py  __main__.py  config.yaml  datadump.py  pipeline.smk  rule__cge_resfinder.py
tests/: test_1_standard_workflow.py  test_simple.py
